# n-body-simulator

./: CMakeLists.txt  build-fast.sh  build.sh  conanfile.txt
include/: Vector2D.h
src/: main.cpp
